# vka

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-build-win10-vs2022.bat
config/: particle_sim_last_session.json  simulation_params_2D.json  simulation_params_3D.json
resources/models/cornell_box/: cornell_box.mtl
src/0.1.03/applications/minimal_path_tracer/: config.h  main.cpp  shader_interface.h  utility.h
src/0.1.03/applications/minimal_path_tracer/shaders/: interface.glsl  random.glsl  template.glsl  vka_structs.glsl
src/0.1.03/applications/minimal_path_tracer/shaders/path_tracing/: pt.comp  pt_common.glsl  pt_math.glsl  pt_params.glsl  sampling.glsl
src/0.1.03/applications/test_app/: config.h  main.cpp
src/0.1.03/framework/vka/: globals.h  vka.h
src/0.1.03/framework/vka/advanced_state/: AdvancedState.cpp  AdvancedState.h  ImGuiWrapper.cpp  ImGuiWrapper.h
src/0.1.03/framework/vka/advanced_state/caches/: DepthBufferCache.cpp  FramebufferCache.cpp  FramebufferCache.h  ModelCache.cpp  ModelCache.h  TextureCache.cpp  TextureCache.h
src/0.1.03/framework/vka/advanced_utility/: complex_commands.h  complex_commands_build.cpp  complex_commands_exec.cpp  complex_commands_utility.cpp  misc_utility.cpp  misc_utility.h
src/0.1.03/framework/vka/controller/camera/: Camera.h  FixedCamera.cpp  FixedCamera.h
src/0.1.03/framework/vka/core/: core_common.h
src/0.1.03/framework/vka/core/core_state/: CmdAllocator.cpp  CmdAllocator.h  CoreState.cpp  CoreState.h  Device.cpp  Device.h  GlfwWindow.cpp  GlfwWindow.h  IOControler.cpp  IOControler.h  MemAllocator.cpp  MemAllocator.h  ResourceCache.h  ResourcePool.cpp  ResourcePool.h  Window.h  device_properties.h
src/0.1.03/framework/vka/core/core_utility/: acceleration_structure_utility.cpp  acceleration_structure_utility.h  buffer_utility.cpp  buffer_utility.h  cmd_buffer_utility.cpp  general_commands.cpp  general_commands.h  image_utility.cpp  image_utility.h  types.h
src/0.1.03/framework/vka/core/resources/: Descriptor.cpp  IResourcePool.h  Resource.h
src/0.1.03/framework/vka/pbr/: HdrImagePdfCache.cpp  HdrImagePdfCache.h
src/0.1.03/framework/vka/pbr/universal/: UScene.cpp  UScene.h
src/0.1.03/framework/vka/shaders/: assign_random_color.geom  fill.frag  fill.vert  fill_texture.frag  fill_texture.vert  matrix_vec4_mult.vert  normalizeImg.comp  normalizeImg.frag  random.glsl  vertex_color.frag
src/0.1.03/framework/vka/specialized_utility/: draw_2D.cpp  draw_2D.h  draw_3D.cpp  draw_3D.h  gui.cpp  gui.h
src/0.1.04/applications/minimal_path_tracer/: config.h  main.cpp  shader_interface.h
src/0.1.04/applications/minimal_path_tracer/shaders/: pt.comp
src/0.1.04/applications/minimal_path_tracer_with_gui/: config.h  main.cpp  shader_interface.h  ui.cpp  ui.h
src/0.1.04/applications/minimal_path_tracer_with_gui/shaders/: interface_structs.glsl  pt.comp  shader_interface.cpp
src/0.1.04/applications/openxr-example/: Main.cpp  MeshData.cpp  MirrorView.cpp  Util.cpp
src/0.1.04/applications/particle_sim/: config.h  main.cpp  resources.cpp  resources.h  shader_interface.h  ui.cpp  ui.h
src/0.1.04/applications/particle_sim/bindings/: interface_structs.h  render_prog.cpp  simulation_prog.cpp
src/0.1.04/applications/particle_sim/shaders/: generat_particles.comp  interface_structs.glsl  particle_interaction.glsl  render_particle.frag  render_particle.vert  test_iterator.comp  update_particles.comp
src/0.1.04/applications/particle_sim_2/: config.h  main.cpp  resources.cpp  resources.h  ui.h
src/0.1.04/applications/particle_sim_2/bindings/: render_prog.cpp  simulation_prog.cpp
src/0.1.04/applications/particle_sim_2/shaders/: generat_particles.comp  interface_structs.glsl  particle_interaction.glsl  render_particle.vert  reorder_particles.comp  update_particles.comp
src/0.1.04/framework/vka/: globals.h  vka.h
src/0.1.04/framework/vka/advanced_state/: AdvancedState.cpp  AdvancedState.h  Exporter.cpp  Exporter.h  ImFileIntegration.cpp  ImFileIntegration.h  ImGuiWrapper.cpp  ImGuiWrapper.h  UploadQueue.cpp  UploadQueue.h
src/0.1.04/framework/vka/advanced_state/caches/: BinaryLoadCache.cpp  BinaryLoadCache.h  DataCache.cpp  DataCache.h  DepthBufferCache.h  FeedbackDataCache.cpp  FeedbackDataCache.h  FramebufferCache.cpp  HostCache.cpp  HostCache.h  ImGuiTextureIDCache.cpp  ImGuiTextureIDCache.h  ImageCache.cpp  ImageCache.h  ModelCache.cpp  ModelCache.h  TextureCache.cpp  TextureCache.h  UniqueResourceCache.cpp  UniqueResourceCache.h
src/0.1.04/framework/vka/advanced_state/vr/: VrDevice.cpp  VrDevice.h  VrIOController.cpp  VrIOController.h  VrState.cpp  VrState.h  XrContext.cpp  XrContext.h  XrControllers.cpp  XrControllers.h  XrHeadset.cpp  XrHeadset.h  XrSwapchainImage.cpp  XrSwapchainImage.h  xr_common.cpp  xr_common.h
src/0.1.04/framework/vka/advanced_utility/: complex_commands.h  complex_commands_build.cpp  complex_commands_utility.cpp  misc_utility.cpp  misc_utility.h
src/0.1.04/framework/vka/controller/camera/: Camera.h  FixedCamera.cpp  FixedCamera.h
src/0.1.04/framework/vka/core/: core_common.h
src/0.1.04/framework/vka/core/core_state/: CoreState.cpp  CoreState.h  Device.cpp  Device.h  GlfwWindow.cpp  GlfwWindow.h  IOControler.cpp  IOControler.h  MemAllocator.cpp  ResourceCache.cpp  ResourceCache.h  ResourcePool.cpp  ResourcePool.h  Window.h  device_properties.cpp  device_properties.h
src/0.1.04/framework/vka/core/core_utility/: acceleration_structure_utility.cpp  cmd_buffer_utility.h  debug_utility.cpp  debug_utility.h  general_commands.cpp  general_commands.h  image_utility.cpp  image_utility.h  misc_utility.cpp  (+2 more)
src/0.1.04/framework/vka/profiling/: ImageEstimatorComparator.cpp  ImageEstimatorComparator.h  TimeQueryManager.cpp  TimeQueryManager.h
src/0.1.04/framework/vka/specialized_modules/: default_scene.cpp  default_scene.h  interface_structs.h
src/0.1.04/framework/vka/specialized_utility/: GVar.cpp  GVar.h  compute.cpp  compute.h  draw_2D.cpp  draw_2D.h  draw_3D.cpp  draw_3D.h  gui.cpp  gui.h  image_metrics.cpp  image_metrics.h  physics.cpp  physics.h  sorting.cpp  sorting.h
(+146 files in other folders)
